# DC-GA

./: CMakeLists.txt  main.cpp
OpenACC/: AbstractHAEA.cu  AbstractHAEA.h  BaseRandom.h  GaussianMutator.cpp  GaussianMutator.h  GaussianRandom.cpp  GaussianRandom.cu  GaussianRandom.h  Hipercube.cpp  Hipercube.cu  Hipercube.h  LinearXOver.cpp  LinearXOver.h  Makefile  OpenACCHAEA.cpp  OpenACCHAEA.h  Operator.cpp  Operator.h  Rastrigin.cpp  Rastrigin.cu  Rastrigin.h  Selection.h  Space.cpp  Space.h  Tournament.cpp  Tournament.cu  Tournament.h  UniformRandom.cu  UniformRandom.h  UniformRandomCPU.cpp  UniformRandomCPU.h  UniformRandomInt.cu  UniformRandomInt.h  UniformRandomIntCPU.cpp  UniformRandomIntCPU.h  main.cpp  test.cu  test.h
OpenACC1/: GaussianMutator.cpp  GaussianMutator.h  Hipercube.cpp  Hipercube.h  LinearXOver.cpp  LinearXOver.h  Makefile  Random.cpp  Random.h  Rastrigin.cpp  Rastrigin.h  Tournament.cpp  Tournament.h  main.cpp
cpu/: CMakeLists.txt  main.cpp  mainMPI.cpp
cpu/functions/: Rastrigin.cpp
cpu/ga/: Hipercube.cpp  Hipercube.h  Space.h
cpu/ga/HAEA/: AbstractHAEA.h  OpenMPHAEA.cpp  OpenMPHAEA.h  OpenMPIHAEA.cpp  OpenMPIHAEA.h  PosixHAEA.cpp  PosixHAEA.h
cpu/operators/: Operator.h
cpu/operators/mutations/: GaussianMutator.cpp  GaussianMutator.h
cpu/operators/xover/: LinearXOver.h
cpu/random/: BaseRandom.cpp  GaussianRandom.cpp  GaussianRandom.h  UniformRandomInt.cpp  UniformRandomIntCPU.cpp
cpu/selection/: Selection.cpp  Selection.h  Tournament.cpp  Tournament.h
distance/: Distance.cpp  Distance.h
functions/: Rastrigin.cpp  Rastrigin.h
ga/: Hipercube.cpp  Hipercube.h  OptimizationFunction.cpp  OptimizationFunction.h  Space.cpp  Space.h
ga/HAEA/: AbstractHAEA.cpp  AbstractHAEA.h
gpu/: CMakeLists.txt  main.cu
gpu/functions/: Rastrigin.h
gpu/ga/: Hipercube.cu  Hipercube.h  Space.cu  Space.h
gpu/ga/HAEA/: AbstractHAEA.h
gpu/operators/: Operator.cu  Operator.h
gpu/operators/mutations/: GaussianMutator.cu  GaussianMutator.h
gpu/operators/xover/: LinearXOver.cu  LinearXOver.h
gpu/random/: BaseRandom.cu  BaseRandom.h  GaussianRandom.cu  GaussianRandom.h  UniformRandom.cu  UniformRandom.h  UniformRandomInt.cu  UniformRandomInt.h
gpu/selection/: Selection.cu  Selection.h  Tournament.cu  Tournament.h
operators/: Operator.cpp  Operator.h
operators/mutations/: GaussianMutator.cpp  GaussianMutator.h
operators/xover/: LinearXOver.cpp
random/: UniformRandom.cpp  UniformRandom.h  UniformRandomInt.h
selection/: Selection.h
